[gd_scene load_steps=4 format=3 uid="uid://blns2xj1e3qiw"]

[ext_resource type="Script" uid="uid://do4vkfixbgxqe" path="res://menu.gd" id="1_lti8b"]
[ext_resource type="Texture2D" uid="uid://g4aju6pdd8rn" path="res://solid_sage.png" id="2_ouk20"]
[ext_resource type="PackedScene" uid="uid://dnimkygvmidpk" path="res://settings_visual_button.tscn" id="3_mae5d"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ouk20")

[node name="JoinGameButton" type="Button" parent="."]
layout_mode = 2
offset_left = 646.0
offset_top = 640.0
offset_right = 831.0
offset_bottom = 706.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Join Game"

[node name="HostGameButton" type="Button" parent="."]
layout_mode = 2
offset_left = 1082.0
offset_top = 640.0
offset_right = 1282.0
offset_bottom = 706.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Host Game"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 872.0
offset_top = 376.0
offset_right = 1058.0
offset_bottom = 445.0
theme_override_font_sizes/font_size = 50
text = "Forager"

[node name="SettingsVisualButton" parent="." instance=ExtResource("3_mae5d")]
offset_left = 64.0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 64.0

[connection signal="pressed" from="JoinGameButton" to="." method="_on_join_game_button_pressed"]
[connection signal="pressed" from="HostGameButton" to="." method="_on_host_game_button_pressed"]
